cmake_minimum_required(VERSION 3.23)
project(class)

set(CMAKE_CXX_STANDARD 14)

add_executable(class
        chapter2/main.cpp
        test/main.cpp
        test1/main.cpp
        Test2/main.cpp
        week1/main.cpp
        Week10/overloadedGrossPay/overloadedGrossPay.cpp
        Week10/staticLocalVariableDemo/staticLocalVariableDemo.cpp
        Week10/Week10Lab/main.cpp
        Week1HW/main.cpp
        Week2/3DaySales/main.cpp
        Week2/BooksRead/main.cpp
        Week2/EggsProblem/main.cpp
        Week2/Week2HW/main.cpp
        Week2/Week2Lab/main.cpp
        Week2/WidgetsSold/main.cpp
        Week3/monthlyPayment/main.cpp
        Week3/randomNumbers/main.cpp
        Week3/Week3HW/main.cpp
        Week3/Week3Lab/main.cpp
        Week4/changeGame/main.cpp
        Week4/minimumMaximum/main.cpp
        Week4/rectangleComparison/main.cpp
        Week4/Week4HW/main.cpp
        Week5/geometryCalc/main.cpp
        Week5/speedOfSound/main.cpp
        Week5/testReview/main.cpp
        Week5/Week5HW/main.cpp
        Week6/grandNashDoWhile/grandNashHotelDoWhile.cpp
        Week6/inClassProgram/main.cpp
        Week6/letterGradesLoop/main.cpp
        Week6/salesForLoopWithAcum/salesForLoopWithAcum.cpp
        Week6/Week6Lab/main.cpp
        Week8/guessingGame/main.cpp
        Week8/Week8Hw/main.cpp
        Week8/Week8Lab/main.cpp
        Week8/nestedLoopStudentScores.cpp
        Week8/salesOutputFile.cpp
        Week9/Lab1/main.cpp
        Week9/Lab2/main.cpp
        Week9/Week9HW/main.cpp Week11/arrayTest/main.cpp)
